<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.jane.expressSingleManage.FristActivity">

    <Button
        android:id="@+id/button_laijian"
        android:text="@string/text_laijian"
        android:textSize="30sp"
        android:layout_width="200dp"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/button_qingdian"
        android:text="@string/text_qingdian"
        android:textSize="30sp"
        android:layout_width="200dp"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/button_chazhao"
        android:text="@string/text_chazhao"
        android:textSize="30sp"
        android:layout_width="200dp"
        android:layout_height="100dp" />

</LinearLayout>
