<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity$PlaceholderFragment">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="快递单号:"/>
    <EditText
        android:id="@+id/eidt_number"
        android:layout_toRightOf="@id/text_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="请输入单号(0:查询全部数据1:查询今天数据)"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:text="@string/type_text"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_type"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textSize="20sp"
            android:focusable="true"
            android:enabled="true"
            android:layout_weight="1"
            android:text="@string/text_add"/>

        <Button
            android:id="@+id/button_update"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textSize="20sp"
            android:enabled="true"
            android:layout_weight="1"
            android:text="@string/text_update"/>

        <Button
            android:id="@+id/button_find"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textSize="20sp"
            android:enabled="true"
            android:layout_weight="1"
            android:text="@string/text_find"/>
    </LinearLayout>

    <!--<Button-->
        <!--android:id="@+id/button_delete"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="20sp"-->
        <!--android:text="@string/text_delete"/>-->

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:text="@string/export_type"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_export_type"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/button_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_export"/>

    </LinearLayout>
    <TextView
        android:id="@+id/text_filePath"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
